# escultor

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md  cutbox.cpp  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.cpp  figurageometrica.h  input.txt  main.cpp  output.off  putbox.cpp  putbox.h  putellipsoid.h  putellisoid.cpp  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  readtxt.cpp  readtxt.h  sculptor.cpp  sculptor.h  teste-cubo.off  voxel.h
Doxyfile/html/: _readme_8md.html  functions_vars.html  globals.html  graph_legend.html  main_8cpp.html  sculptor_8h.html
Doxyfile/latex/: _readme_8md.tex  annotated.tex  class_sculptor.tex  class_sculptor.tex.tmp  files.tex  main_8cpp.tex  refman.tex  sculptor_8cpp__incl.dot  sculptor_8h.tex  voxel_8h.tex  voxel_8h__dep__incl.dot
Doxygen/: Doxyfile
Doxygen/html/: class_sculptor.html  files.html  functions.html  functions_func.html  globals_func.html  index.html  md__readme.html  sculptor_8cpp.html  sculptor_8h__incl.dot  sculptor_8h_source.html  voxel_8h.html  voxel_8h__dep__incl.dot
Doxygen/latex/: index.tex  main_8cpp__incl.dot  md__readme.tex  sculptor_8cpp.tex  sculptor_8h__dep__incl.dot  sculptor_8h__incl.dot  struct_voxel.tex
html/: annotated.html  class_sculptor-members.html  class_sculptor.html  classes.html  functions.html  functions_vars.html  index.html  main_8cpp__incl.dot  menudata.js  pages.html  sculptor_8cpp__incl.dot  sculptor_8h_source.html  struct_voxel-members.html  struct_voxel.html  voxel_8h_source.html
html/search/: all_6.js  (+3 more)
(+20 files in other folders)
